# Submission-Membangun-Sistem-Machine-Learning

./: pyproject.toml
.github/workflows/: CI.yml
data/preprocessed/: preprocessing_pipeline.pkl  y_test.csv  y_train.csv
modelling/: modelling.py
preprocessing/: Eksperimen_Evan Hanif.ipynb  automate_evan-hanif.py  automate_evanhanif.py  eksperimen_evan-hanif.ipynb
