[project]
name = "smsl-evan-siswa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "dagshub>=0.6.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mlflow==2.19.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
]
